# multi-select-reorder

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
multi_select_reorder/: __init__.py  cli.py  mcp_server.py  selector.py
scripts/: smoke.py
skills/multi-select-reorder/: SKILL.md
tests/: test_mcp_results.py  test_selector.py
